media/error_tc/error_237.txt
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_T2nvINP.cpp: In function 'int main()':
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_T2nvINP.cpp:8:1: error: expected ';' before '}' token
 }
 ^
